Fix product grids overflowing in some themes (https://github.com/woocommerce/woocommerce-blocks/pull/978)

--- a/plugins/woocommerce-blocks/assets/css/style.scss
+++ b/plugins/woocommerce-blocks/assets/css/style.scss
@@ -7,6 +7,7 @@
 }
 
 .wc-block-grid__product {
+	box-sizing: border-box;
 	padding: 0 $gap 0 0;
 	margin: 0 0 $gap-large 0;
 	float: none;
